--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
         <div class="form-grid" id="formGrid"></div>
     </div>
 
-    <script src="dropdown_options.js"></script>
-    <script src="field_definitions.js"></script>
+    <script src="dropdown-options.js"></script>
+    <script src="field-definitions.js"></script>
     <script>
         let catsData = [];
         let currentCatIndex = null;
