--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     
     <div class="controls">
         <label class="file-label">
-            Load Save File
+            Load clan_cats.json
             <input type="file" id="fileInput" accept=".json">
         </label>
         <select id="catSelect" class="cat-select" disabled>
